# nyc-kids-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DASHBOARD-PLAN.md  Dockerfile  FILTER-REVIEW.md  HANDOFF.md  MULTI-USER-PLAN.md  PHASE-3-PLAN.md  README.md  SOURCES-BACKLOG.md  docker-compose.dev.yml  docker-compose.yml  feature-list.json  init.sh  progress.md  pyproject.toml  session-handoff.md
.claude/: settings.json
.claude/agents/: source-adder.md  source-fixer.md  source-verifier.md
.github/: pull_request_template.md
scripts/: _census.py  build_library_neighborhoods.py  build_park_neighborhoods.py  build_tract_nta.py  cleanup_labels.sh
src/nyc_events/: auth.py  (+13 more)
tests/: test_bbg_parse.py  test_bk_childrens_museum_parse.py  test_bpl_parse.py  test_brooklyn_army_terminal_parse.py  test_brooklyn_bridge_park_parse.py  test_city_parks_foundation_parse.py  test_dashboard.py  test_db.py  test_domino_park_parse.py  test_enrich.py  test_event_projection.py  test_filters.py  test_governors_island_parse.py  test_greenwood_cemetery_parse.py  test_industry_city_parse.py  test_ingest_runs.py  test_intrepid_parse.py  test_kccny_parse.py  test_missing_detection.py  test_mommy_poppins_parse.py  test_neighborhoods.py  test_new_york_family_parse.py  test_ny_transit_museum_parse.py  test_nyc_permitted_events_parse.py  test_nycgovparks_events_parse.py  test_nypl_parse.py  test_prospect_park_parse.py  test_qpl_parse.py  test_search_tools.py  test_security_fixes.py  test_si_childrens_museum_parse.py  test_snug_harbor_parse.py  test_source_registry.py  test_weekend_window.py
(+64 files in other folders)
